<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeCard</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <!-- register -->
    <string name="register">register</string>
    <string name="input_username">plese input account</string>
    <string name="input_code">plese input password</string>
    <string name="input_code_onemore">plese input password again</string>
    <string name="register_inputidentify_code">plese input code</string>
    <string name="get_identify_code">get identify code </string>
    <string name="register_phone">please input phone</string>
    <string name="register_reallyname">please input name</string>
    <!-- login -->
    <string name="login">login</string>
    <string name="free_register">Free registration</string>   
    <string name="forget_pwd">Forget password</string>
     <string name="exit_login">Logout</string>
    <!-- findpwd -->
    <string name="findpwd">retrieve password</string>
	<string name="personalcenter_phone">cell-phone number:</string>
	<string name="register_identify_code">identifying code:</string>
	<string name="findpwd_true">confirm</string>
	<!-- 意见反馈 -->
	<string name="feedback">sugmsg</string>
	<string name="sugmsg">sugmsg</string>
	<string name="personalcenter_submit">submit</string>
    <string name="sugmsg_content">please input</string>
    <string name="sugmsg_way">sugmsg way</string>
    <string name="sugmsg_way_content">please input phone</string>
    <string name="reset">reset</string>
    <!-- 加载 -->
    <string name="progress_loading">loading..</string>
    <string name="list_no_data_comment">no comment</string>
    <!-- 评论 -->
    <string name="title_hint">title</string>
    <string name="describe_hint">describe</string>
    <string name="phone_hint">phone</string>
    <!-- 我的 -->
    <string name="add_name">account</string>
    <string name="add_nick">nick</string>
    <string name="add_email">email</string>
    <string name="add_phone">phone</string>
    <string name="add_address">address</string>
    <string name="add_gender">sex</string>
    <string name="pop_photo">take a photo</string>
    <string name="modify">edit</string>
    <string name="man">man</string>
    <string name="woman">woman</string>
    <string name="add_nick_hint">add nick</string>
    <string name="add_email_hint">add email_</string>
    <string name="add_gender_hint">sec</string>
    <string name="add_phone_hint">phone</string>
    <string name="phone">phone</string>
    <string name="add_address_hint">add address</string>
    <string name="perfect">person detal</string>
    <string name="cancel">cancel</string>
    <string name="publish_empty_text">what want you say…</string>
    <string name="take_photo">take a photo</string>
    <string name="select_from_local">local</string>
</resources>
