<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/full_bagcolor"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/cl_titlebar_bkg" >

        <ImageView
            android:id="@+id/imgView_nearsky_fillorder_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_bkg"
            android:paddingLeft="@dimen/titlebar_view_padding_left"
            android:paddingTop="@dimen/titlebar_view_padding_top"
            android:paddingRight="@dimen/titlebar_view_padding_left"
            android:paddingBottom="@dimen/titlebar_view_padding_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/findpwd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_15"
        android:background="@drawable/white_frame"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/padding_left_in_frame"
        android:paddingRight="@dimen/padding_left_in_frame"
         >

       <!--  <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_3"
            android:scaleType="centerInside"
            android:src="@drawable/phone_num" /> -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/personalcenter_phone"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_15" 
            android:drawableLeft="@drawable/phone_num"/>

        <AutoCompleteTextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_5"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入手机号"
            android:inputType="textEmailAddress|phone"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_15" 
            android:textColorHint="@color/text_color_light_gray"
            android:maxLength="11"
            />
    </LinearLayout>

    <Button
        android:id="@+id/getcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_15"
        android:background="@drawable/btn_submit_bkg"
        android:enabled="false"
        android:text="@string/get_identify_code"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/white_frame"
        android:orientation="horizontal"
        android:gravity="center_vertical"
         android:paddingLeft="@dimen/padding_left_in_frame"
        android:paddingRight="@dimen/padding_left_in_frame"
         >

       <!--  <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/space_3"
            android:scaleType="centerInside"
            android:src="@drawable/code_icon" />
 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/register_identify_code"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_15"
            android:drawableLeft="@drawable/code_icon" />

        <EditText
            android:id="@+id/code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_5"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:hint="请输入验证码"
            android:maxLines="1"
            android:password="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_15"
            android:textColorHint="@color/text_color_light_gray" />
    </LinearLayout>

    <Button
        android:id="@+id/findpwd_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/orange_btn"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_15"
        android:text="@string/findpwd_true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_in_submit" />

</LinearLayout>