<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/full_bagcolor"
    android:orientation="vertical" >
  
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/titlebar_height"
        android:background="@color/cl_titlebar_bkg" >

        <ImageView
            android:id="@+id/iv_register_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingBottom="@dimen/titlebar_view_padding_top"
            android:paddingLeft="@dimen/titlebar_view_padding_left"
            android:paddingRight="@dimen/titlebar_view_padding_left"
            android:paddingTop="@dimen/titlebar_view_padding_top"
            android:scaleType="centerInside"
            android:src="@drawable/btn_back_bkg"
            android:onClick="register_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_20"
        android:background="@drawable/white_frame"
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_10"
        android:paddingLeft="@dimen/space_10" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
             >

            <LinearLayout
            android:layout_width="@dimen/tv_width_in_user_center"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/username"
                android:gravity="center_vertical|left"
                android:text="账  号"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_14" />

            
        </LinearLayout>

           <EditText
                android:id="@+id/username"
                android:layout_width="208dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_username"
                android:inputType="phone"
                android:maxLength="11"
                android:maxLines="1"
                android:paddingBottom="@dimen/space_10"
                android:paddingTop="@dimen/space_10"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color_light_gray"
                android:textSize="@dimen/text_size_15" >

            </EditText>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/cl_mainsearch_content_bkg" >
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
            android:layout_width="@dimen/tv_width_in_user_center"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/password"
                android:gravity="center_vertical|left"
                android:text="密  码"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_14" />

           
        </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/input_code"
                android:maxLines="1"
                android:password="true"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/text_color_black"
                android:textColorHint="@color/text_color_light_gray"
                android:textSize="@dimen/text_size_15"
                android:paddingTop="@dimen/space_10"
                android:paddingBottom="@dimen/space_10" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_10"
        android:background="@drawable/white_frame"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="@dimen/tv_width_in_user_center"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_10"
            android:paddingTop="@dimen/space_10" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:drawableLeft="@drawable/code_icon"
                android:gravity="center_vertical|left"
                android:text="验"
                android:textColor="@color/darkgray"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="证"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:text="码:"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_identify_code"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/space_10"
            android:background="@null"
            android:hint="@string/register_inputidentify_code"
            android:inputType="number"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textColor="@color/lightgray"
            android:textSize="@dimen/text_size_14" />
        
        <TextView 
            android:id="@+id/txtChkCode"
            android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:text="1234"
			android:gravity="center" 
			android:layout_weight="1"			  
			android:textStyle="bold|italic"/>
        
				
    </LinearLayout>

    <RelativeLayout 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginLeft="15.0dip" 
        android:layout_marginTop="20.0dip" 
        android:layout_marginRight="15.0dip">

    </RelativeLayout>

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        
        <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_18"
        android:background="@drawable/btn_submit_bkg"
        android:text="注  册"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_in_submit" 
        android:onClick="register"/>
        
        <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/space_10"
        android:layout_marginRight="@dimen/space_10"
        android:layout_marginTop="@dimen/space_18"
        android:background="@drawable/btn_submit_bkg"
        android:text="重  置"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_in_submit" 
        android:onClick="reset"/>
    </LinearLayout>
</LinearLayout>